// Copyright 2019 The Chromium OS Authors. All rights reserved.
// Use of this source code is governed by a BSD-style license that can be
// found in the LICENSE file.

syntax = "proto3";

package device;

option go_package = "go.chromium.org/chromiumos/infra/proto/go/device";

import "device/platform_id.proto";
import "device/model_id.proto";
import "device/brand_id.proto";
import "device/variant_id.proto";

// These are the globally unique identifiers that determine what set of
// configuration data is used for a given device.
message ConfigId {

  // Required. 
  PlatformId platform_id = 1;

  // Required.
  ModelId model_id = 2;

  // Required.
  VariantId variant_id = 3;

  // Required.
  BrandId brand_id = 4;
}
